# NewPims

./: .gitignore  .justfile  Cargo.toml  brun.sh  brun_release.sh  build.rs  latest.tsv
configs/system_configs/: sub-batch-on.json
crates/neupimrust/: Cargo.toml  bindings.h  build.rs  cbindgen.toml  counts_test.json
crates/neupimrust/src/: global_config.rs  global_counts.rs  instruction.rs  lib.rs  no_icnt.rs  settings.rs  tensor.rs
crates/neupimrust/src/allocator/: act_allocator.rs  kv_allocator.rs  mod.rs  weight_allocator.rs
crates/neupimsim/: Cargo.toml
crates/neupimsim/src/: main.rs
include/: cpp_main.h
src/: lib.rs  main.rs
src/cpp/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Cargo.toml  build.sh  build_rel_dbg.sh  build_release.sh  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanfile.txt  conanrun.sh  conanrunenv-release-x86_64.sh  counts.json  counts2.json  deactivate_conanbuild.sh  deactivate_conanrun.sh  latest.tsv  parse_counts.py  sjq.toml  todo.md
src/cpp/cmake/: corrosion_cxx.cmake
src/cpp/src/: CMakeLists.txt  Common.cc  Common.h  Core.cc  Dram.cc  Dram.h  Interconnect.cc  Interconnect.h  Model.cc  ModelProgram.cc  NeuPIMSCore.cc  NeuPIMSystolicWS.cc  SimulationConfig.h  Simulator.cc  Simulator.h  Sram.cc  StageProgram.cc  Stat.h  SystolicWS.cc  main.cc  main_lib.cc  main_lib.h
src/cpp/src/allocator/: ActivationAllocator.cc  AddressAllocator.h  KVCache.md  KVCacheAllocator.cc  WeightAllocator.cc
src/cpp/src/client/: Client.cc
src/cpp/src/operations/: Add.cc  FusedMHA.cc  Gelu.cc  LayerNorm.cc  MatMul.cc  MatMul.h  MatMulWs.h  NeuPIMSAttend.cc  NeuPIMSLogitSoftmax.cc  Operation.h  PIMGEMV.cc  PIMGEMVAdd.cc  PIMGEMVSoftmax.cc  Softmax.cc
src/cpp/src/scheduler/: Scheduler.cc
src/cpp/src/tensor/: NPUTensor.cc  NPUTensor2D.cc  PIMTensor.cc
