[package]
name = "new_pims"
version = "0.1.0"
edition = "2021"
[workspace]
members = ["crates/*"]
resolver = "2"
[dependencies]
cxx = "1.0.100"
[build-dependencies]
cxx-build = "1.0.100"
cmake = "0.1"

[workspace.dependencies]
lazy_static = "1.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.128"
smallvec = "1.13.2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
neupimrust = { path = "crates/neupimrust" }
cbindgen = "0.27"
clap = "4.5.20"
derive_more = "1.0.0"
cxx = "1"
cxx-build = { version = "1", features = ["c++17"] }
