[package]
name = "neupimrust"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
[lib]
crate-type = ["staticlib", "rlib"]
[dependencies]
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
smallvec = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
clap = {workspace = true, features = ["derive"]}
derive_more = {workspace = true ,features = ["add_assign","deref"]}
[build-dependencies]
cbindgen = { workspace = true }
